--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         <h2>Les 1: FTP / Filezilla / Ma Cloud hosting</h3>
         <ul>
             <li><a href="voorbeeld-achievement/index.html">Voorbeeld achievement</a></li>
-            <li>Javascript Achievement</li>
+            <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2JS/index.html"> Javascript Achievements</a></li>
 
         </ul>
         <hr>
         <h2>Les 2: HTML5</h3>
         <ul>
-            <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
-            <li>...</li>
+            <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2Ontwerp/goodlandingpage.html"> Good landing page</a></li>
+            <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2JSLes2/checkerboard.html"> Checkerboard</a></li>
+            <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2-JS-Javascript-2/start_1.html"> Javascript Functions</a></li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
