updates voor javascript achievements sites

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <img src="js.png" />
 
-        <h1>Javascript Achievements: JOUW NAAM HIER</h1>
+        <h1>Javascript Achievements: Kilian Bultje SD1B</h1>
 
         <a href="https://trello.com/b/xo5TJzFr/javascript-achievements" target="_blank" class="big-link">Overzicht alle beschikbare
             opdrachten</a>
@@ -41,7 +41,7 @@
         <h2>Les 1: FTP / Filezilla / Ma Cloud hosting</h3>
         <ul>
             <li><a href="voorbeeld-achievement/index.html">Voorbeeld achievement</a></li>
-            <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2JS/index.html"> Javascript Achievements</a></li>
+            <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2JS/index.html"> Tijd met Javascript</a></li>
 
         </ul>
         <hr>
@@ -50,13 +50,14 @@
             <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2Ontwerp/goodlandingpage.html"> Good landing page</a></li>
             <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2JSLes2/checkerboard.html"> Checkerboard</a></li>
             <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2-JS-Javascript-2/start_1.html"> Javascript Functions</a></li>
+            <li><a href="http://http://31303.hosts1.ma-cloud.nl/museum/MuseumPagina.html"></a>Scheepsvaart museum</li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
-            <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
-            <li>...</li>
+            <li><a href="http://http://31303.hosts1.ma-cloud.nl/ma-webxr/index.html"></a>WebXR Demo</li>
+            <li><a href="http://http://31303.hosts1.ma-cloud.nl/Javascript-Arrays/index.html"></a> Javascript Arrays</li>
+            <li><a href="http://http://31303.hosts1.ma-cloud.nl/Padding-Marges/index.html"></a> Padding-Marges</li>
         </ul>
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
