--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2Ontwerp/goodlandingpage.html"> Good landing page</a></li>
             <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2JSLes2/checkerboard.html"> Checkerboard</a></li>
             <li><a href = "http://31303.hosts1.ma-cloud.nl/F1M2-JS-Javascript-2/start_1.html"> Javascript Functions</a></li>
-            <li><a href="http://http://31303.hosts1.ma-cloud.nl/museum/MuseumPagina.html"></a>Scheepsvaart museum</li>
+            <li><a href="http://31303.hosts1.ma-cloud.nl/museum/MuseumPagina.html">Scheepsvaart museum</a></li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
-            <li><a href="http://http://31303.hosts1.ma-cloud.nl/ma-webxr/index.html"></a>WebXR Demo</li>
-            <li><a href="http://http://31303.hosts1.ma-cloud.nl/Javascript-Arrays/index.html"></a> Javascript Arrays</li>
-            <li><a href="http://http://31303.hosts1.ma-cloud.nl/Padding-Marges/index.html"></a> Padding-Marges</li>
+            <li><a href="http://31303.hosts1.ma-cloud.nl/ma-webxr/index.html">WebXR Demo</a></li>
+            <li><a href="http://31303.hosts1.ma-cloud.nl/Javascript-Arrays/index.html">Javascript Arrays</a></li>
+            <li><a href="http://31303.hosts1.ma-cloud.nl/Padding-Marges/index.html">Padding-Marges</a></li>
         </ul>
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
