website jv achievements updated

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <li><a href="http://31303.hosts1.ma-cloud.nl/ma-webxr/index.html">WebXR Demo</a></li>
             <li><a href="http://31303.hosts1.ma-cloud.nl/Javascript-Arrays/index.html">Javascript Arrays</a></li>
             <li><a href="http://31303.hosts1.ma-cloud.nl/Padding-Marges/index.html">Padding-Marges</a></li>
+            <li><a href="http://31303.hosts1.ma-cloud.nl/Do-Date-Display/index.html">Do-Date-Display</a></li>
         </ul>
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
