Nieuwe opdrachten gemaakt

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
-            <li><a href="http://31303.hosts1.ma-cloud.nl/ma-webxr/index.html">WebXR Demo</a></li>
             <li><a href="http://31303.hosts1.ma-cloud.nl/Javascript-Arrays/index.html">Javascript Arrays</a></li>
             <li><a href="http://31303.hosts1.ma-cloud.nl/Padding-Marges/index.html">Padding-Marges</a></li>
             <li><a href="http://31303.hosts1.ma-cloud.nl/Do-Date-Display/index.html">Do-Date-Display</a></li>
@@ -63,21 +62,21 @@
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
         <ul>
-            <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
+            <li><a href="http://31303.hosts1.ma-cloud.nl/Healthbar/index.html">Healthbar</a></li>
+            <li><a href="http://31303.hosts1.ma-cloud.nl/ma-webxr/index.html">WebXR Demo</a></li>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 5: Functions / Events</h3>
         <ul>
-            <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
+            <li><a href="http://31303.hosts1.ma-cloud.nl/Quiz-Javascript/index.html">Javascript Quizz</a></li>
+            <li></li>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 6: Modulo</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="http://31303.hosts1.ma-cloud.nl/Rotation-Sensor/F1M2JS-Rotation-Sensor-main/sensors.html">Rotation Sensor</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
